{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 2246,
  "lineage": "7ac4a4fd-4e02-6ad9-cb2e-3c9f7061ec07",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784040140536:internet-gateway/igw-09989b65a49ec70dd",
            "id": "igw-09989b65a49ec70dd",
            "owner_id": "784040140536",
            "tags": {
              "Name": "myigw"
            },
            "tags_all": {
              "Name": "myigw"
            },
            "vpc_id": "vpc-029ea7927dc9465a0"
          },
          "dependencies": [
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:loadbalancer/app/app-lb/6fb5a9bbcb96dca3",
            "arn_suffix": "app/app-lb/6fb5a9bbcb96dca3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-179199497.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:784040140536:loadbalancer/app/app-lb/6fb5a9bbcb96dca3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-080b4fc3780465521"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-012d59b8673281beb"
              },
              {
                "subnet_id": "subnet-0c7d55420349ce9a1"
              }
            ],
            "subnets": [
              "subnet-012d59b8673281beb",
              "subnet-0c7d55420349ce9a1"
            ],
            "vpc_id": "vpc-029ea7927dc9465a0",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg2",
            "aws_subnet.pub-a",
            "aws_subnet.pub-b",
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:listener/app/app-lb/6fb5a9bbcb96dca3/5d239371281f4ee6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:targetgroup/tg-group/e615ec564b373ef1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:784040140536:listener/app/app-lb/6fb5a9bbcb96dca3/5d239371281f4ee6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:loadbalancer/app/app-lb/6fb5a9bbcb96dca3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-lb",
            "aws_lb_target_group.tg-group",
            "aws_security_group.sg2",
            "aws_subnet.pub-a",
            "aws_subnet.pub-b",
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:targetgroup/tg1-group/e91af9f21f9bcb51",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:listener-rule/app/app-lb/6fb5a9bbcb96dca3/5d239371281f4ee6/377eed197c099d8e",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/index.html"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [
                  {
                    "key": "health",
                    "value": "check"
                  }
                ],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:784040140536:listener-rule/app/app-lb/6fb5a9bbcb96dca3/5d239371281f4ee6/377eed197c099d8e",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:listener/app/app-lb/6fb5a9bbcb96dca3/5d239371281f4ee6",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-lb",
            "aws_lb_listener.lb-listener",
            "aws_lb_target_group.tg-group",
            "aws_lb_target_group.tg1-group",
            "aws_security_group.sg2",
            "aws_subnet.pub-a",
            "aws_subnet.pub-b",
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:targetgroup/tg2-group/15ad972e4e7191ec",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:listener-rule/app/app-lb/6fb5a9bbcb96dca3/5d239371281f4ee6/80aa9c4e6ea0aa80",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/index.html"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [
                  {
                    "key": "ipl",
                    "value": "mi"
                  }
                ],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:784040140536:listener-rule/app/app-lb/6fb5a9bbcb96dca3/5d239371281f4ee6/80aa9c4e6ea0aa80",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:listener/app/app-lb/6fb5a9bbcb96dca3/5d239371281f4ee6",
            "priority": 99,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-lb",
            "aws_lb_listener.lb-listener",
            "aws_lb_target_group.tg-group",
            "aws_lb_target_group.tg2-group",
            "aws_security_group.sg2",
            "aws_subnet.pub-a",
            "aws_subnet.pub-b",
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:targetgroup/tg3-group/c50a0a59dacc1b9e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:listener-rule/app/app-lb/6fb5a9bbcb96dca3/5d239371281f4ee6/6b4fe33839497896",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/index.html"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [
                  {
                    "key": "value",
                    "value": "service"
                  }
                ],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:784040140536:listener-rule/app/app-lb/6fb5a9bbcb96dca3/5d239371281f4ee6/6b4fe33839497896",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:listener/app/app-lb/6fb5a9bbcb96dca3/5d239371281f4ee6",
            "priority": 98,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-lb",
            "aws_lb_listener.lb-listener",
            "aws_lb_target_group.tg-group",
            "aws_lb_target_group.tg3-group",
            "aws_security_group.sg2",
            "aws_subnet.pub-a",
            "aws_subnet.pub-b",
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:targetgroup/tg4-group/9bf1208fc44f0e2a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:listener-rule/app/app-lb/6fb5a9bbcb96dca3/5d239371281f4ee6/79e12779c3778d7b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/index.html"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [
                  {
                    "key": "local",
                    "value": "host"
                  }
                ],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:784040140536:listener-rule/app/app-lb/6fb5a9bbcb96dca3/5d239371281f4ee6/79e12779c3778d7b",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:listener/app/app-lb/6fb5a9bbcb96dca3/5d239371281f4ee6",
            "priority": 97,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-lb",
            "aws_lb_listener.lb-listener",
            "aws_lb_target_group.tg-group",
            "aws_lb_target_group.tg4-group",
            "aws_security_group.sg2",
            "aws_subnet.pub-a",
            "aws_subnet.pub-b",
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:targetgroup/tg5-group/3d4aef00e42aa966",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:listener-rule/app/app-lb/6fb5a9bbcb96dca3/5d239371281f4ee6/f9f25a74af0ada36",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/index.html"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [
                  {
                    "key": "logic",
                    "value": "answer"
                  }
                ],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:784040140536:listener-rule/app/app-lb/6fb5a9bbcb96dca3/5d239371281f4ee6/f9f25a74af0ada36",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:listener/app/app-lb/6fb5a9bbcb96dca3/5d239371281f4ee6",
            "priority": 96,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-lb",
            "aws_lb_listener.lb-listener",
            "aws_lb_target_group.tg-group",
            "aws_lb_target_group.tg5-group",
            "aws_security_group.sg2",
            "aws_subnet.pub-a",
            "aws_subnet.pub-b",
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:targetgroup/tg-group/e615ec564b373ef1",
            "arn_suffix": "targetgroup/tg-group/e615ec564b373ef1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:784040140536:targetgroup/tg-group/e615ec564b373ef1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-029ea7927dc9465a0"
          },
          "dependencies": [
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg1-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:targetgroup/tg1-group/e91af9f21f9bcb51",
            "arn_suffix": "targetgroup/tg1-group/e91af9f21f9bcb51",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:784040140536:targetgroup/tg1-group/e91af9f21f9bcb51",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg1-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-029ea7927dc9465a0"
          },
          "dependencies": [
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg2-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:targetgroup/tg2-group/15ad972e4e7191ec",
            "arn_suffix": "targetgroup/tg2-group/15ad972e4e7191ec",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:784040140536:targetgroup/tg2-group/15ad972e4e7191ec",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg2-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-029ea7927dc9465a0"
          },
          "dependencies": [
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg3-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:targetgroup/tg3-group/c50a0a59dacc1b9e",
            "arn_suffix": "targetgroup/tg3-group/c50a0a59dacc1b9e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:784040140536:targetgroup/tg3-group/c50a0a59dacc1b9e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg3-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-029ea7927dc9465a0"
          },
          "dependencies": [
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg4-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:targetgroup/tg4-group/9bf1208fc44f0e2a",
            "arn_suffix": "targetgroup/tg4-group/9bf1208fc44f0e2a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:784040140536:targetgroup/tg4-group/9bf1208fc44f0e2a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg4-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-029ea7927dc9465a0"
          },
          "dependencies": [
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg5-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:784040140536:targetgroup/tg5-group/3d4aef00e42aa966",
            "arn_suffix": "targetgroup/tg5-group/3d4aef00e42aa966",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:784040140536:targetgroup/tg5-group/3d4aef00e42aa966",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg5-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-029ea7927dc9465a0"
          },
          "dependencies": [
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routeigm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784040140536:route-table/rtb-0815980705d7cc3f2",
            "id": "rtb-0815980705d7cc3f2",
            "owner_id": "784040140536",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09989b65a49ec70dd",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09989b65a49ec70dd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-029ea7927dc9465a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4680890729b53bc",
            "route_table_id": "rtb-0815980705d7cc3f2",
            "subnet_id": "subnet-0c7d55420349ce9a1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.routeigm",
            "aws_subnet.pub-a",
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e39c0d007c00859c",
            "route_table_id": "rtb-0815980705d7cc3f2",
            "subnet_id": "subnet-012d59b8673281beb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.routeigm",
            "aws_subnet.pub-b",
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784040140536:security-group/sg-080b4fc3780465521",
            "description": "Port tcp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outboun",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080b4fc3780465521",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "react-server-alb",
            "name_prefix": "",
            "owner_id": "784040140536",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-029ea7927dc9465a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784040140536:security-group/sg-0829f60d4668e8a12",
            "description": "Port ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outboun",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0829f60d4668e8a12",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port ",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "reactfinal-securitygroup",
            "name_prefix": "",
            "owner_id": "784040140536",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-029ea7927dc9465a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784040140536:subnet/subnet-0c7d55420349ce9a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "145.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7d55420349ce9a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "784040140536",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public -a1"
            },
            "tags_all": {
              "Name": "public -a1"
            },
            "vpc_id": "vpc-029ea7927dc9465a0"
          },
          "dependencies": [
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784040140536:subnet/subnet-012d59b8673281beb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "145.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012d59b8673281beb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "784040140536",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public -b1"
            },
            "tags_all": {
              "Name": "public -b1"
            },
            "vpc_id": "vpc-029ea7927dc9465a0"
          },
          "dependencies": [
            "aws_vpc.createVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "createVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784040140536:vpc/vpc-029ea7927dc9465a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "145.0.0.0/16",
            "default_network_acl_id": "acl-0fc1b46eb450453f2",
            "default_route_table_id": "rtb-0e991af5d2009f554",
            "default_security_group_id": "sg-0a467d5f20f8af9a3",
            "dhcp_options_id": "dopt-0a0d58ea62e69ac9d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-029ea7927dc9465a0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e991af5d2009f554",
            "owner_id": "784040140536",
            "tags": {
              "Name": "myterraformvpc"
            },
            "tags_all": {
              "Name": "myterraformvpc"
            }
          }
        }
      ]
    }
  ]
}